--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
@@ -24,7 +25,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "deploy": "npm run build && npm run push-page",
+    "push-page": "gh-pages -d public",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
